Request Module Working fully (Submit / Cancel) for Employee end. Accept / Decline for Admin end. Included CSS as well - Crispy Forms included, Bootstrap4 (Make sure installed apps are correct and to pip install cirspy-bootstrap4 :) - CSRF Token bug fixes

--- a/src/hr_management/publication/templates/create_publication.html
+++ b/src/hr_management/publication/templates/create_publication.html
@@ -20,10 +20,11 @@
         <h2> Create Publication </h2>
         
         <form method="post">
-            {% csrf_token %}
             
             {{form.media}}
             {{form.as_p}}
+
+            {% csrf_token %}
 
             <button type="submit"> Post </button>
 
@@ -33,6 +34,9 @@
 
     <!-- Showing all Publications -->
     <section>
+
+        <!-- Token can be removed -->
+        {% csrf_token %}
 
         {% for post in publication_post %}
         <h1>{{post.title}} Published: {{post.publication_date}}</h1>
